<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MeetingRoomDetailViewController" customModule="VMDirectory" customModuleProvider="target"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MeetingRoomView" customModule="VMDirectory" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="1uw-fU-rld">
                    <rect key="frame" x="20" y="64" width="374" height="312"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="RHU-5X-L3B">
                            <rect key="frame" x="0.0" y="0.0" width="374" height="33.5"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meeting Room Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4e-LY-ZPR">
                                    <rect key="frame" x="0.0" y="0.0" width="374" height="33.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                        </stackView>
                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gk2-CQ-FQI">
                            <rect key="frame" x="0.0" y="73.5" width="374" height="26.5"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room ID" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O85-QR-Stp">
                                    <rect key="frame" x="0.0" y="0.0" width="187" height="26.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XXXXXXXXX" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xr-TO-JpQ">
                                    <rect key="frame" x="187" y="0.0" width="187" height="26.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                        </stackView>
                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Q1Y-oi-7ye">
                            <rect key="frame" x="0.0" y="140" width="374" height="26.5"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Created At" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5Q-r5-cVW">
                                    <rect key="frame" x="0.0" y="0.0" width="187" height="26.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1-2-2020" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjO-zQ-vnk">
                                    <rect key="frame" x="187" y="0.0" width="187" height="26.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                        </stackView>
                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="FWJ-XP-BQ8">
                            <rect key="frame" x="0.0" y="206.5" width="374" height="26.5"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfB-t6-5Bw">
                                    <rect key="frame" x="0.0" y="0.0" width="187" height="26.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Occupied" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wD-2p-eI3">
                                    <rect key="frame" x="187" y="0.0" width="187" height="26.5"/>
                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                        </stackView>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F4F-as-eSb">
                            <rect key="frame" x="0.0" y="273" width="374" height="39"/>
                            <color key="backgroundColor" red="0.76862745099999996" green="0.0078431372550000003" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                            <state key="normal" title="Book Now">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <connections>
                                <action selector="bookNowClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="ug5-iJ-PrK"/>
                            </connections>
                        </button>
                    </subviews>
                </stackView>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="1uw-fU-rld" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="7Ej-Vu-9Ig"/>
                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1uw-fU-rld" secondAttribute="trailing" constant="20" id="IFK-5a-JYv"/>
                <constraint firstItem="1uw-fU-rld" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="KHG-pv-dbv"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <connections>
                <outlet property="bookNow" destination="F4F-as-eSb" id="K6F-1T-yS8"/>
                <outlet property="createdAt" destination="wjO-zQ-vnk" id="aW8-YL-b3u"/>
                <outlet property="meetingRoomID" destination="0Xr-TO-JpQ" id="SBU-Ra-N5j"/>
                <outlet property="meetingRoomName" destination="X4e-LY-ZPR" id="MEl-HH-NwH"/>
                <outlet property="status" destination="4wD-2p-eI3" id="SoW-11-rOW"/>
            </connections>
            <point key="canvasLocation" x="137.68115942028987" y="122.54464285714285"/>
        </view>
    </objects>
</document>
