...
    }
}

extension MeetingRoomDetailViewController: MeetingRoomProtocol {
    func showMeetingRoomBookAlert(for name: String) {
        
        let booked = UIAlertAction(title: NSLocalizedString("Book", comment: "Book meeting room"),
                                   style: .default) { (action) in
                                    self.meetingRoomView.updateBooking()
                                    
        }
        
        let cancelAction = UIAlertAction(title: NSLocalizedString("Cancel", comment: "cancel meeting room"),
                                         style: .destructive,
                                         handler: nil)
        
        let alert = UIAlertController(title: name,
                                      message: NSLocalizedString("roomBookingMessage", comment: "Do you want to book meeting room"),
                                      preferredStyle: .alert)
...
