...
    ///  Parameter:
    ///   -name:  Name of the meeting room to be displayed on the alert
    func showMeetingRoomBookAlert(for name: String)
}

enum Status: String {
    case occupied
    case vacate
}

class MeetingRoomView: UIView {
    
    @IBOutlet weak var meetingRoomName: UILabel!
    @IBOutlet weak var createdAt: UILabel!
...
